# MathBeauty

./: .gitignore  CMakeLists.txt  MathBeauty.cpp  MathBeauty.hpp  README.md  ReadMe.txt  clear.sh  makefile
include/: MathBeauty.hpp
src/: CMakeLists.txt  MathBeauty.cpp
